This submission contains some misc features, but mainly covers following items:
1. Add Kafka connect framework as a system service that would be launched during the bootstrapping time, this is an ALl-IN-ONE solution. It is worth noting that connect cluster can be deployed physically from Kafka service depending on your service volume.
2. Make the service scripts to be better formatted, mitigate the suffering when reading these scripts and boost further maintenance.
3. Simply implementing service status checking, to return the service status based on whether the lock file is existing or not.

--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -79,7 +79,7 @@ kafka_log_dirs: /var/lib/kafka/logs
 kafka_num_partitions: 3
 
 # The minimum age of a log file to be eligible for deletion
-kafka_log_retention_hours: 168
+kafka_log_retention_hours: 720
 
 # Enable auto creation of topic on the server
 kafka_auto_create_topics_enable: true
@@ -122,5 +122,10 @@ restproxy_consumer_threads: 3
 # The maximum total time to wait for messages for a request if the maximum number of messages has not yet been reached.
 restproxy_consumer_timeout: 1000
 
+############################# Kafka connect #############################
+
+# The replication factor used when Kafka Connects creates the topic used to store connector offsets. 
+# This should always be at least 3 for a production system, but cannot be larger than the number of Kafka brokers in the cluster.
+connect_internal_topic_replicas: 3
 
 
